refactor: update MathUtils